--- a/_posts/2019-12-30-the-us-narrative-today.html
+++ b/_posts/2019-12-30-the-us-narrative-today.html
@@ -1534,107 +1534,107 @@ stories:
   domain: http://www.phoenixnewtimes.com/
   link: https://www.phoenixnewtimes.com/news/paul-petersen-maricopa-county-assessor-suspension-board-upholds-11415025
 images:
-- name: copper-circuit-downtown-la_36349151230_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-la_36349151230_o.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-alien-goggles.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-alien-goggles.JPG
-- name: oldsmallboat-oldsmallboat-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-kand-two.jpg
-- name: crow_smooth_ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_smooth_ride.jpg
-- name: stories-new-path-in-the-woods-black-white.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-path-in-the-woods-black-white.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
-- name: beach-rocks-beach-rocks-currents-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-granite.jpg
-- name: capital-battle-capitolbattle-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-green-zuma.jpg
-- name: berlinwall-DSC-0084-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-smooth-ride.jpg
-- name: stalin-time-bridge-over-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-bridge-over-columbia.jpg
-- name: school-clouds-church-clouds-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-clean-view.jpg
-- name: mistywoods-babyfoot-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-bright-sand.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-satan-red.jpg
-- name: la-muse-downtown-la_36349151230_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-la_36349151230_o.jpg
-- name: san-francisco-street-view-san-francisco-street-view-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit.jpg
-- name: server-racks-door-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-atari-missle.jpg
-- name: containership-containership-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-brush.jpg
-- name: paris-paris-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-kandinsky-bv.jpg
-- name: beach-rocks-beach-rocks-currents-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-far-away.jpg
-- name: old-door-lock-old-door-lock-2-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dry-skin.jpg
-- name: mosaic-face-mosaic-face-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-hot-spicy.jpg
-- name: old-granary-field-oldhouse-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-clean-view.jpg
-- name: old-door-lock-old-door-lock-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-graham-sutherland.jpg
-- name: bordercrossing-bordercrossing-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-sand-paper.jpg
-- name: stories-death-valley-national-park-dali-three-just-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-death-valley-national-park-dali-three-just-road.jpg
-- name: flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
-- name: blossombar-smooth-ride-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-smooth-ride-file-00-00-24-99.jpg
-- name: abandonedbuildings_space_pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_space_pizza.jpg
-- name: old-granary-field-granaryfield-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-satan-red.jpg
-- name: aws-s3-stories-copper-servers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-copper-servers.jpg
-- name: braceros-domingo-ulloa-los-angeles-downtown-from-afar.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-los-angeles-downtown-from-afar.jpg
-- name: art-museum-art-museum-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dry-skin.jpg
-- name: stories-power-lines-empty-space-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-power-lines-empty-space-copper-circuit.jpg
-- name: christianity-christianity-under-construction-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-plentiful.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-horiz-circuit.jpg
-- name: nyc-flag-nycflag-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-nazi-poster.jpg
-- name: border-crossing-bordercrossing-umberto-bocc.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-umberto-bocc.png
-- name: stalin-time-high-speed-train-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-high-speed-train-station.jpg
-- name: stories-new-16-38-600-500-0-avg-1-1-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-16-38-600-500-0-avg-1-1-1.jpg
-- name: bluelake-bright-sand-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-bright-sand-file-00-01-17-38.jpg
-- name: nazi-invasion-downtown-street-crosswalk.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-street-crosswalk.jpg
-- name: school-clouds-church-clouds-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-umberto-bocc.jpg
-- name: oldcabin-oldcabin-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-deep-connections.jpg
-- name: trucksilo-trucksilo-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-soul.jpg
-- name: mosaic-face-mosaic-face-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crafty-painting.jpg
-- name: copper-circuit-checkpoint-charlie-mcdonalds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-checkpoint-charlie-mcdonalds.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-graham-sutherland.jpg
-- name: aws-s3-square-C106VpCVQAEkHqy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C106VpCVQAEkHqy.jpg
-- name: trucksilo-trucksilo-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-granite.jpg
-- name: copper-circuit-crow-stkump-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-crow-stkump-waterfront.jpg
-- name: miamibeach-miamibeach-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-far-away.jpg
+- name: aws-s3-stories-new-69-120-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-69-120-800-500-0-max-0-1--1.jpg
+- name: copper-circuit-san-francisco-salesforce-bay-bridge.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-francisco-salesforce-bay-bridge.jpg
+- name: border-fence-border-fence-on-hill-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-graham-sutherland.jpg
+- name: meadowbutterfly-meadow-butterfly-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-green-zuma.jpg
+- name: old-granary-field-oldhouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-aqua.jpg
+- name: sand-hand-sand-hand-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-graham-sutherland.jpg
+- name: san-francisco-street-view-san-francisco-street-view-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crabapple.jpg
+- name: old-school-house-old-schoolhouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-aqua.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-mucha-mult.jpg
+- name: old-granary-field-granaryfield-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-yellow-collage.jpg
+- name: walled-garden-walled-garden-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dark-dali.jpg
+- name: old-door-lock-old-door-lock-2-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-emily-carr.jpg
+- name: status-berlin-status-berlin-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-rain.jpg
+- name: oldtrain-oldtrain-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-cinnamon-rolls.jpg
+- name: braceros-domingo-ulloa-walking-water-front-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-walking-water-front-sun.jpg
+- name: adam-smith-adam-smith-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-wols.jpg
+- name: la-muse-graffitti-red-hat-man.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-graffitti-red-hat-man.jpg
+- name: supreme-court-supremecourt-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-gred-mash.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-dali-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dali-two.JPG
+- name: old-door-lock-old-door-lock-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-marcel-duchamp.jpg
+- name: cargo-ship-cargo-ship-on-sea-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-attack-planes.jpg
+- name: mistywoods-babyfoot-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-circuit.jpg
+- name: store-on-corner-store-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-crabapple.jpg
+- name: gypsymosaic-gypsy-eyes-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-creativity.jpg
+- name: castle-wall-DSC-0067-free-woman.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-free-woman.JPG
+- name: downtown-fredericksburg-atari-missle.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-atari-missle.JPG
+- name: old-house-oldhouse.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse.jpg
+- name: rockingchair-rockingchair-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dry-skin.jpg
+- name: bordercrossing-bordercrossing-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-satan-red.jpg
+- name: yosemite-yosemite-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-deep-connections.jpg
+- name: crow-crow-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-alberto-giacometti.jpg
+- name: nazi-invasion-butterfly-on-flower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-butterfly-on-flower.jpg
+- name: lincoln-memorial-lincolnmemorial-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-sand-paper.jpg
+- name: locked-up-steam-lock-up-steam-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-feed-people.jpg
+- name: oldcabin-store-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-constitution.jpg
+- name: stories-new-17-88-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-17-88-800-500-0-max-0--5--5.jpg
+- name: bluelake-post-modern-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-post-modern-file-00-01-17-38.jpg
+- name: beach-rocks-beach-rocks-currents-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-deep-connections.jpg
+- name: walled-garden-walled-garden-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-colorful-dream.jpg
+- name: rockingchair-rockingchair-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-pablo-blue.jpg
+- name: stories-gears-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-gears-smoking-cigarette.jpg
+- name: locked-up-steam-lock-up-steam-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-emily-carr.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-plentiful.jpg
+- name: art-museum-art-museum-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-bright-sand.jpg
+- name: old-barn-old-barn-1500-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-dali.jpg
+- name: fence-mexico-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-circuit.jpg
+- name: oldhouse-oldhouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-sunday.jpg
+- name: aws-s3-stories-machine-road-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-machine-road-copper-circuit.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
+- name: white-house-lawn-white-house-lawn-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-deep-connections.jpg
+- name: nazi-invasion-IMG_8355.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8355.jpg
 ---
 Collision Injures Edmond Man.&nbsp;It's Time For Making Resolutions, But How Long Will They Last?.&nbsp;Public Funds, Salaried Workers Power Striking French Unions.&nbsp;Countywide Polling Locations Used For First Time.&nbsp;Lower Columbia Crabbers Working Fast.&nbsp;Police Investigate Human Remains Found On Christmas Day.&nbsp;House Explosion Rattles Parts Of Brownfield.&nbsp;Identity Of Man Shot And Killed By Police During Arrest Expected To Be Released Monday.&nbsp;
